--- a/package.json
+++ b/package.json
@@ -52,6 +52,24 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "../coverage",
+    "coverageThreshold": {
+      "global": {
+        "functions": 15,
+        "lines": 15
+      }
+    },
+    "coveragePathIgnorePatterns": [
+        "/node_modules/",
+        "/dist/",
+        "/build/",
+        ".eslintrc.js",
+        ".prettierrc",
+        "\\.module\\.ts$",
+        "\\.entity\\.ts$",
+        "main\\.ts$"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
@@ -65,7 +83,6 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
 }
