--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "fast-csv": "^5.0.1",
     "mongoose": "^8.5.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
