--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-DB_USER=  
-DB_PASSWORD = 
-DB_CLUSTER = 
-DB = 
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_HOST=
+MONGODB_DB_NAME=
+MONGODB_OPTIONS=
+
+CLOUDINARY_URL=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
