--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.4.0",
+    "csv-parser": "^3.0.0",
+    "fast-csv": "^5.0.1",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.0",
